Make IME extensions decide when to show the keyboard.

When opening emoji, handwriting or voice input from opt-in IME menu,
InputMethodManager overrides the keyboard url to tell the VK to switch
keyboard and ImeMenuTray call KeyboardController to show the VK.
Since the VK is always back to main keyset when hidden, it will be on
main keyset when shown, and get onhashchanged event to switch to e/h/v
keyset. Thus, has a flash.

To avoid the flash of main keyset, we need to make IME extension decide
when to bring up the VK. So if the KeyboardController is initialized,
and keyboard has been loaded once, it means IME extension could bring
up the VK. Don't show keyboard from ImeMenuTray.

BUG=667609
TEST=Verfied on local build.

Review-Url: https://codereview.chromium.org/2603663002
Cr-Commit-Position: refs/heads/master@{#442161}

Former-commit-id: 886f64844d90cffa12dbf183eba086becaf819a0