ui/keyboard/keyboard_controller.h
@@ -117,6 +117,9 @@ class KEYBOARD_EXPORT KeyboardController : public ui::InputMethodObserver,
 
   bool show_on_resize() { return show_on_resize_; }
 
+  // Returns true if keyboard window has been created.
+  bool IsKeyboardWindowCreated();
+
   // Returns the current keyboard bounds. An empty rectangle will get returned
   // when the keyboard is not shown or in FLOATING mode.
   const gfx::Rect& current_keyboard_bounds() {
